FIX: Gaps and Waybar Colors

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,7 +5,7 @@
 }
 
 window#waybar {
-  background-color: rgba(20, 20, 20, 1);
+  background-color: rgba(20, 20, 20, 0.8);
   color: #ffffff;
   transition-property: background-color;
   transition-duration: 0.5s;
